# Hierarchical-Demand-Forecasting-System

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml
Hierarchical Demand Forecasting System/: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  requirements.txt
Hierarchical Demand Forecasting System/.github/workflows/: ci.yml
Hierarchical Demand Forecasting System/.streamlit/: config.toml
Hierarchical Demand Forecasting System/api/: main.py  schemas.py
Hierarchical Demand Forecasting System/app/: streamlit_app.py
Hierarchical Demand Forecasting System/sql/features/: lag_features.sql  rolling_stats.sql
Hierarchical Demand Forecasting System/src/demand_forecast/config/: settings.py
Hierarchical Demand Forecasting System/src/demand_forecast/data/: loader.py  sql_features.py
Hierarchical Demand Forecasting System/src/demand_forecast/evaluation/: baseline.py  business.py  cv.py  metrics.py
Hierarchical Demand Forecasting System/src/demand_forecast/features/: base.py  calendar.py  hierarchical.py  temporal.py
Hierarchical Demand Forecasting System/src/demand_forecast/models/: __init__.py  conformal.py  lgbm_forecaster.py  naive.py
Hierarchical Demand Forecasting System/src/demand_forecast/reconciliation/: methods.py  mint.py
Hierarchical Demand Forecasting System/src/demand_forecast/utils/: typing.py
Hierarchical Demand Forecasting System/tests/: conftest.py  test_api.py  test_business.py  test_cv.py  test_dashboard.py  test_features.py  test_loader.py  test_metrics.py  test_models.py  test_placeholder.py  test_reconciliation.py
app/: config.py  streamlit_app.py  utils.py
app/pages/: 1_🏠_Resumen.py  2_🔍_Analisis.py  3_🤖_Resultados.py  4_⚙️_Proceso.py
docs/superpowers/plans/: 2026-06-05-phase-4-baselines.md
reports/: BASELINE_SUMMARY.md
scripts/: test_dashboard_manual.py
sql/features/: hierarchy_aggregates.sql
src/demand_forecast/config/: settings.py
src/demand_forecast/data/: hierarchy.py
src/demand_forecast/evaluation/: metrics.py
src/demand_forecast/models/: base.py  conformal.py  statistical.py
src/demand_forecast/reconciliation/: __init__.py
src/demand_forecast/utils/: typing.py
tests/: conftest.py  test_dashboard_integration.py  test_features.py  test_hierarchy.py  test_lgbm_forecaster.py  test_loader.py  test_probabilistic.py  test_reconciliation.py
