[project]
name = "demand-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "duckdb>=0.10",
    "fastapi>=0.110.0",
    "hierarchicalforecast>=0.4",
    "kaggle>=2.2.1",
    "lightgbm>=4.3.0",
    "mlflow>=2.11.0",
    "optuna>=3.5.0",
    "pandas>=2.2.0",
    "plotly>=5.20.0",
    "polars>=0.20.0",
    "pyarrow>=15.0.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "scikit-learn>=1.4.0",
    "scipy>=1.13.0",
    "shap>=0.45.0",
    "statsforecast>=2.0.1",
    "streamlit>=1.35.0",
    "tabulate>=0.10.0",
    "uvicorn>=0.27.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "mypy>=1.10",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "types-requests>=2.33.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demand_forecast"]

[tool.hatch.build]
include = ["src/demand_forecast/**/*.py"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
