[project]
name = "demand-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=0.10",
    "fastapi>=0.136.3",
    "hierarchicalforecast>=0.4",
    "kaggle>=2.2.1",
    "lightgbm>=4.6.0",
    "mlflow>=3.13.0",
    "optuna>=4.9.0",
    "pandas>=2.3.3",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "scikit-learn>=1.9.0",
    "scipy>=1.17.1",
    "shap>=0.51.0",
    "statsforecast>=2.0.1",
    "streamlit>=1.58.0",
    "tabulate>=0.10.0",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "mypy>=1.10",
    "pandas-stubs>=3.0.3.260530",
    "pre-commit>=4.6.0",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "types-requests>=2.33.0.20260518",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demand_forecast"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP"]

[tool.mypy]
strict = true
ignore_missing_imports = true
explicit_package_bases = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=85"
